--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -413,6 +413,9 @@ jobs:
       board-changes: ${{ steps.board-changes.outputs.result }}
       core-changes: ${{ steps.core-changes.outputs.result }}
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: tj-actions/changed-files@v42
         id: changed-files
         with:
