--- a/app/dts/bindings/behaviors/zmk,behavior-point-device-directional.yaml
+++ b/app/dts/bindings/behaviors/zmk,behavior-point-device-directional.yaml
@@ -8,7 +8,7 @@ compatible: "zmk,behavior-point-device-directional"
 properties:
   label:
     type: string
-    required: false
+    required: true
   #"#slider-binding-cells":
   #type: int
   #required: false
