--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -23,3 +23,4 @@
 #include <behaviors/soft_off.dtsi>
 #include <behaviors/mouse_move.dtsi>
 #include <behaviors/mouse_scroll.dtsi>
+#include <behaviors/trackball.dtsi>
