--- a/app/dts/bindings/zmk,keymap.yaml
+++ b/app/dts/bindings/zmk,keymap.yaml
@@ -17,6 +17,9 @@ child-binding:
     sensor-bindings:
       type: phandle-array
       required: false
+    trackball-bindings:
+      type: phandle-array
+      required: false
 
     label:
       type: string
