--- a/app/Kconfig
+++ b/app/Kconfig
@@ -332,6 +332,24 @@ config ZMK_RGB_UNDERGLOW_AUTO_OFF_USB
     bool "Turn off RGB underglow when USB is disconnected"
     depends on USB_DEVICE_STACK
 
+if ZMK_BATTERY_REPORTING
+config ZMK_RGB_UNDERGLOW_BATTERY_STATUS
+  bool "Reflect the battery status with underglow"
+  default n
+
+config ZMK_RGB_UNDERGLOW_BATTERY_CRITICALLY_LOW_THRESHOLD
+  int "Threshold for showing the RGB value for critically low battery charge"
+  range 0 100
+  default 5
+
+config ZMK_RGB_UNDERGLOW_BATTERY_LOW_THRESHOLD
+  int "Threshold for showing the RGB value for low battery charge"
+  range 0 100
+  default 15
+
+#ZMK_BATTERY_REPORTING
+endif
+
 #ZMK_RGB_UNDERGLOW
 endif
 
