--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -109,7 +109,11 @@ add_subdirectory(src/split)
 
 target_sources_ifdef(CONFIG_USB_DEVICE_STACK app PRIVATE src/usb.c)
 target_sources_ifdef(CONFIG_ZMK_USB app PRIVATE src/usb_hid.c)
-target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW app PRIVATE src/rgb_underglow.c)
+
+if (CONFIG_ZMK_RGB_UNDERGLOW)
+  target_sources(app PRIVATE src/rgb_underglow/rgb_underglow_base.c)
+endif()
+
 target_sources_ifdef(CONFIG_ZMK_BACKLIGHT app PRIVATE src/backlight.c)
 target_sources_ifdef(CONFIG_ZMK_LOW_PRIORITY_WORK_QUEUE app PRIVATE src/workqueue.c)
 target_sources(app PRIVATE src/main.c)
