--- a/app/Kconfig
+++ b/app/Kconfig
@@ -334,20 +334,28 @@ config ZMK_RGB_UNDERGLOW_AUTO_OFF_USB
 
 if ZMK_BATTERY_REPORTING
 config ZMK_RGB_UNDERGLOW_BATTERY_STATUS
-  bool "Reflect the battery status with underglow"
-  default n
+    bool "Reflect the battery status with underglow"
+    default n
 
 config ZMK_RGB_UNDERGLOW_BATTERY_CRITICALLY_LOW_THRESHOLD
-  int "Threshold for showing the RGB value for critically low battery charge"
-  range 0 100
-  default 5
+    int "Threshold for showing the RGB value for critically low battery charge"
+    range 0 100
+    default 5
 
 config ZMK_RGB_UNDERGLOW_BATTERY_LOW_THRESHOLD
-  int "Threshold for showing the RGB value for low battery charge"
-  range 0 100
-  default 15
+    int "Threshold for showing the RGB value for low battery charge"
+    range 0 100
+    default 15
 
 #ZMK_BATTERY_REPORTING
+endif
+
+if ZMK_BLE
+config ZMK_RGB_UNDERGLOW_BLE_STATUS
+    bool "Reflect the ble connection states with underglow"
+    default n
+
+#ZMK_BLE
 endif
 
 #ZMK_RGB_UNDERGLOW
