apparently not wokring

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -114,7 +114,9 @@ if (CONFIG_ZMK_RGB_UNDERGLOW)
   target_sources(app PRIVATE src/rgb_underglow/current_status.c)
   target_sources(app PRIVATE src/rgb_underglow/rgb_underglow_base.c)
   target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/battery_status.c)
-  target_sources_ifdef(CONFIG_ZMK_SPLIT_ROLE_CENTRAL AND CONFIG_ZMK_RGB_UNDERGLOW_BLE_STATUS app PRIVATE src/rgb_underglow/ble_status.c)
+  if (CONFIG_ZMK_SPLIT_ROLE_CENTRAL AND CONFIG_ZMK_RGB_UNDERGLOW_BLE_STATUS)
+    target_sources(app PRIVATE src/rgb_underglow/ble_status.c)
+  endif()
 endif()
 
 target_sources_ifdef(CONFIG_ZMK_BACKLIGHT app PRIVATE src/backlight.c)
