--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -113,11 +113,11 @@ target_sources_ifdef(CONFIG_ZMK_USB app PRIVATE src/usb_hid.c)
 if (CONFIG_ZMK_RGB_UNDERGLOW)
   target_sources(app PRIVATE src/rgb_underglow/current_status.c)
   target_sources(app PRIVATE src/rgb_underglow/rgb_underglow_base.c)
+  target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/startup_mutex.c)
+  target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/status_on_startup.c)
   target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/battery_status.c)
   if (CONFIG_ZMK_SPLIT_ROLE_CENTRAL AND CONFIG_ZMK_RGB_UNDERGLOW_BLE_STATUS)
     target_sources(app PRIVATE src/rgb_underglow/ble_status.c)
-    target_sources(app PRIVATE src/rgb_underglow/status_on_startup.c)
-    target_sources(app PRIVATE src/rgb_underglow/startup_mutex.c)
   endif()
 endif()
 
