--- a/app/dts/behaviors.dtsi
+++ b/app/dts/behaviors.dtsi
@@ -20,5 +20,6 @@
 #include <behaviors/backlight.dtsi>
 #include <behaviors/macros.dtsi>
 #include <behaviors/mouse_key_press.dtsi>
+#include <behaviors/mouse_move.dtsi>
 #include <behaviors/soft_off.dtsi>
 #include <behaviors/studio_unlock.dtsi>
