add peripheral status service for ug

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -84,7 +84,11 @@ if ((NOT CONFIG_ZMK_SPLIT) OR CONFIG_ZMK_SPLIT_ROLE_CENTRAL)
     target_sources(app PRIVATE src/behaviors/behavior_bt.c)
     target_sources(app PRIVATE src/ble.c)
     target_sources(app PRIVATE src/hog.c)
+    target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BLE_STATUS app PRIVATE src/rgb_underglow/ble_status.c)
   endif()
+else()
+  if (CONFIG_ZMK_BLE)
+    target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BLE_STATUS app PRIVATE src/rgb_underglow/ble_peripheral_status.c)
 endif()
 
 target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW app PRIVATE src/behaviors/behavior_rgb_underglow.c)
@@ -106,7 +110,6 @@ if (CONFIG_ZMK_RGB_UNDERGLOW)
   target_sources(app PRIVATE src/rgb_underglow/rgb_underglow_base.c)
   target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/startup_mutex.c)
   target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/battery_status.c)
-  target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/ble_status.c)
   target_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW_BATTERY_STATUS app PRIVATE src/rgb_underglow/status_on_startup.c)
 endif()
 
